--- a/aulas/mobile/package.json
+++ b/aulas/mobile/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.6",
-    "@react-navigation/native": "^5.1.4",
-    "@react-navigation/stack": "^5.2.9",
+    "@react-navigation/native": "^5.5.1",
+    "@react-navigation/stack": "^5.4.2",
     "axios": "^0.19.2",
-    "expo": "~37.0.3",
+    "expo": "^37.0.12",
     "expo-mail-composer": "~8.1.0",
     "intl": "^1.2.5",
     "react": "~16.9.0",
@@ -26,8 +26,8 @@
     "yarn": "^1.22.4"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "@babel/core": "^7.10.2",
+    "babel-preset-expo": "~8.1.0"
   },
   "private": true
 }
