--- a/aulas/mobile/package.json
+++ b/aulas/mobile/package.json
@@ -17,6 +17,7 @@
     "intl": "^1.2.5",
     "lodash": "^4.17.19",
     "logkitty": "^0.7.1",
+    "mem": "^6.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
